First cuts at motion profile planner

--- a/FRC3543Robot/src/calibration.properties
+++ b/FRC3543Robot/src/calibration.properties
@@ -7,8 +7,10 @@
 #driveline.expiration=0.1
 #driveline.max_output=1.0
 #driveline.gyro.sensitivity=0.007
-#driveline.left_encoder.distance_per_pulse=0.0284
-#driveline.right_encoder.distance_per_pulse=0.0284
+# these are based on AndyMark E4T at 1440 pulses per rev and a 6 inch wheel
+# FIXME - we need to double-check this
+driveline.left_encoder.distance_per_pulse=0.0131
+driveline.right_encoder.distance_per_pulse=0.0131
 #driveline.timer_delay=0.01
 
 #default.linear_gain=0.25
